# systems-thinking-plugin

./: .gitignore  00-project-brief.md  02-goals-and-nongoals.md  07-output-contracts.md  08-repo-conventions-template.md  10-example-use-cases.md  11-claude-build-prompt.md  CHANGELOG.md  CLAUDE.md  COMPATIBILITY_NOTES.md  LICENSE  README.md  TODO.md  pyproject.toml  setup.sh
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: architecture-dependency-mapper.md  caveat-extractor.md  cost-capacity-analyst.md  doc-indexer.md  doc-reader.md  (+2 more)
agents/: architecture-dependency-mapper.md  caveat-extractor.md  cost-capacity-analyst.md  doc-indexer.md  doc-reader.md  extraction-planner.md  pattern-remix-planner.md  synthesis-brief-writer.md  web-researcher.md
docs/: agent-design-principles.md  context-orchestration-design.md  flow-protocol.md  output-contracts.md  repo-conventions.md  status-file-template.md  systems-thinking-foundations.md
examples/: usage-scenarios.md
hooks/: discover-components.sh  hooks.json  stop-quality-gate.sh  user-prompt-gate.sh
specs/: 00-project-brief.md  01-workflows.md  03-agent-design-principles.md  04-subagents-v1.md  05-skills-v1.md  06-hooks-v1.md  07-output-contracts.md  08-repo-conventions-template.md  09-source-ingestion-playbook.md  10-example-use-cases.md
tests/: README.md  conftest.py  pytest.ini  requirements.txt
utils/: aggregate.py  build_prompt.py  estimate_tokens.py  index_doc.py  orchestrate.py  scan_patterns.py  slice_sections.py  tmux_runner.py  validate_output.py
(+50 files in other folders)
